k8s/notejam-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: notejam
  template:
    metadata:
      labels:
        component: notejam
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: notejam
          image: roullli/notejam:$SHA_V
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: storage
              mountPath: /app
