k8s/notejam-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: notejam
  ports:
    - port: 8000 
      targetPort: 8000
